[gd_scene load_steps=7 format=3 uid="uid://cy11tidl1thkj"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_2emhd"]
[ext_resource type="FontFile" uid="uid://dx3hjdh75uimq" path="res://assets/DS-DIGIB.TTF" id="2_80cff"]
[ext_resource type="Texture2D" uid="uid://bh6t6gan0urbe" path="res://assets/button_smile.png" id="3_f50ac"]
[ext_resource type="Texture2D" uid="uid://b3ghf4gsde4l5" path="res://assets/button_smile_pressed.png" id="4_52vc2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uv2l"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpsc2"]
bg_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_2emhd")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="MinesCountPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6uv2l")

[node name="MinesCountLabel" type="Label" parent="PanelContainer/HBoxContainer/MinesCountPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_80cff")
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameStatusButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_f50ac")
texture_pressed = ExtResource("4_52vc2")

[node name="TimerPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hpsc2")

[node name="TimerCountLabel" type="Label" parent="PanelContainer/HBoxContainer/TimerPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_80cff")
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1
vertical_alignment = 1
